History overflow and history promotion bug fix

--- a/Code/static/styles/sass/game.scss
+++ b/Code/static/styles/sass/game.scss
@@ -26,6 +26,7 @@ hr{
 }
 
 .control-container{
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
     background-color: #474341;
@@ -61,6 +62,7 @@ hr{
 }
 
 .container{
+    overflow: hidden;
     display:flex;
     flex-direction: row;
     color:#FFFFFF;
@@ -77,6 +79,7 @@ hr{
     }
 
     .wrapper{
+        overflow: hidden;
         display:flex;
         flex-direction: column;
         flex: 1;
@@ -125,8 +128,10 @@ hr{
             }
 
             .table{
-                overflow:scrolll;
-
+                flex: 1 1 auto;
+                overflow-y: auto;
+                height: 0px;
+                
                 .header, .value{
                     &:nth-child(1){
                         padding-left: 10px;
